<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/LinearLayout01"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">
<EditText
	android:id="@+id/userName"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="2dp"
	android:hint="@string/yourUserName"
	android:textSize="18sp"
	android:typeface="serif"
	android:textStyle="bold"
	android:gravity="left" 
	android:nextFocusDown="@+id/password"
	android:imeOptions="actionNext"
	android:inputType="text"/>
<EditText
	android:id="@+id/password"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="2dp"
	android:hint="@string/yourPassword"
	android:textSize="18sp"
	android:typeface="serif"
	android:textStyle="bold"
	android:gravity="left" 
	android:imeOptions="actionDone"
	android:inputType="textPassword"/>
<LinearLayout
	android:id="@+id/widget40"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation = "horizontal" >
<Button
	android:id="@+id/okButton"
	android:layout_width="0dp"
	android:layout_height="wrap_content"
	android:text="@string/ok"
	android:layout_weight="1" 
	android:onClick="okClicked"/>
<Button
	android:id="@+id/cancelButton"
	android:layout_width="0dp"
	android:layout_height="wrap_content"
	android:text="@string/cancel"
	android:layout_weight="1" 
	android:onClick="cancelClicked"/>
</LinearLayout>
</LinearLayout>